Безопасность и автоматизация процессов

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-*.pyc
+.env
 __pycache__/
-.venv/
+*.py[cod]
+*$py.class
+.pytest_cache/
 venv/
-.DS_Store
-db.sqlite3
+env/
+ENV/
+*.sqlite3
+staticfiles/
+media/
+.vscode/
+.idea/
+backups/
